[gd_scene load_steps=17 format=2]

[ext_resource path="res://players/red-player.png" type="Texture" id=1]
[ext_resource path="res://players/blue-player.png" type="Texture" id=2]
[ext_resource path="res://objects/big_box.png" type="Texture" id=3]
[ext_resource path="res://objects/box.png" type="Texture" id=4]
[ext_resource path="res://blue_plate.tscn" type="PackedScene" id=5]
[ext_resource path="res://test_tiles.tscn" type="PackedScene" id=6]
[ext_resource path="res://red_plate.tscn" type="PackedScene" id=7]
[ext_resource path="res://main menu.gd" type="Script" id=8]
[ext_resource path="res://objects/play_button.png" type="Texture" id=9]
[ext_resource path="res://objects/play_button_pressed.png" type="Texture" id=10]
[ext_resource path="res://objects/menu_button.png" type="Texture" id=11]
[ext_resource path="res://objects/menu_button_pressed.png" type="Texture" id=12]
[ext_resource path="res://fade.tscn" type="PackedScene" id=13]
[ext_resource path="res://music/Main Menu Theme_1b.wav" type="AudioStream" id=14]
[ext_resource path="res://menu.tscn" type="PackedScene" id=15]

[sub_resource type="Theme" id=1]

[node name="main menu" type="Node2D"]
script = ExtResource( 8 )

[node name="buttons" type="Node2D" parent="."]

[node name="playButton" type="TextureButton" parent="buttons"]
margin_left = -32.0
margin_top = -75.0
margin_right = 32.0
margin_bottom = -43.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menuButton" type="TextureButton" parent="buttons"]
margin_left = -32.0
margin_top = -37.0
margin_right = 32.0
margin_bottom = -5.0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tilemap" parent="buttons" instance=ExtResource( 6 )]

[node name="TileMap" parent="buttons/tilemap" index="0"]
tile_data = PoolIntArray( 131066, 10, 0, 131067, 7, 0, 131068, 7, 0, 131069, 7, 0, 131070, 7, 0, 131071, 7, 0, 65536, 7, 0, 65537, 7, 0, 65538, 7, 0, 65539, 7, 0, 65540, 7, 0, 65541, 8, 0 )

[node name="red-player" type="Sprite" parent="buttons"]
position = Vector2( -37, -1 )
texture = ExtResource( 1 )

[node name="blue-player" type="Sprite" parent="buttons"]
position = Vector2( 41, 15 )
texture = ExtResource( 2 )

[node name="big_box" type="Sprite" parent="buttons"]
position = Vector2( -37, 14 )
texture = ExtResource( 3 )

[node name="box" type="Sprite" parent="buttons"]
position = Vector2( -14, 19 )
texture = ExtResource( 4 )

[node name="blue_plate" parent="buttons" instance=ExtResource( 5 )]
position = Vector2( -61, 22 )

[node name="red_plate" parent="buttons" instance=ExtResource( 7 )]
position = Vector2( 59, 22 )

[node name="center" type="Node2D" parent="buttons"]
position = Vector2( 0, -60 )

[node name="buttonplaec" type="Node2D" parent="buttons"]
position = Vector2( -32, -37 )

[node name="button1place" type="Node2D" parent="buttons"]
position = Vector2( -32, -75 )

[node name="menu" parent="." instance=ExtResource( 15 )]

[node name="RichTextLabel" parent="menu" index="0"]
margin_left = -92.0
margin_top = -73.0
margin_right = 98.0
margin_bottom = 40.0
theme = SubResource( 1 )
text = "WASD: Move
L-Click: Swap Player
R-Click: Pick up objects
R: Reset Level
"

[node name="TileMap" parent="menu/tilemap" index="0"]
tile_data = PoolIntArray( 131066, 8, 0, 131067, 8, 0, 131068, 8, 0, 131069, 8, 0, 131070, 8, 0, 131071, 8, 0, 65536, 8, 0, 65537, 8, 0, 65538, 8, 0, 65539, 8, 0, 65540, 8, 0, 65541, 8, 0 )

[node name="AudioStreamPlayer" parent="menu" index="12"]
volume_db = -30.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -7 )
current = true
zoom = Vector2( 0.2, 0.2 )
smoothing_enabled = true
smoothing_speed = 8.0
offset_v = -0.27

[node name="fade" parent="." instance=ExtResource( 13 )]

[node name="ColorRect" parent="fade" index="1"]
margin_left = -655.0
margin_right = 656.0
color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -10.0
autoplay = true

[editable path="buttons/tilemap"]
[editable path="menu"]
[editable path="menu/tilemap"]
[editable path="fade"]
